# tigervnc

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  requirements.txt
.github/containers/bionic/: build.sh
.github/containers/focal/: build.sh
.github/containers/jammy/: build.sh
.github/workflows/: build.yml
cmake/: StaticBuild.cmake
cmake/Modules/: CMakeMacroLibtoolFile.cmake  FindPixman.cmake
common/core/: CMakeLists.txt  Configuration.cxx  Configuration.h  Exception.cxx  Exception.h  LogWriter.cxx  LogWriter.h  Logger.cxx  Logger.h  Logger_file.cxx  Logger_file.h  Logger_stdio.cxx  Logger_syslog.cxx  Logger_syslog.h  Object.cxx  Object.h  Rect.h  Region.cxx  Region.h  Timer.cxx  Timer.h  string.cxx  string.h  time.cxx  time.h  types.h  util.cxx  util.h
common/network/: CMakeLists.txt  Socket.cxx  Socket.h  TcpSocket.cxx  TcpSocket.h  UnixSocket.cxx
common/os/: CMakeLists.txt  Mutex.cxx  Thread.cxx  os.cxx
common/rdr/: AESInStream.cxx  AESOutStream.cxx  BufferedInStream.cxx  BufferedOutStream.cxx  CMakeLists.txt  Exception.cxx  Exception.h  FdInStream.cxx  FdOutStream.cxx  FdOutStream.h  FileInStream.cxx  HexInStream.cxx  HexOutStream.cxx  InStream.cxx  InStream.h  MemInStream.h  MemOutStream.h  OutStream.h  RandomStream.cxx  TLSException.cxx  TLSException.h  TLSInStream.cxx  TLSInStream.h  TLSOutStream.cxx  TLSOutStream.h  ZlibInStream.cxx  ZlibOutStream.cxx
common/rfb/: Blacklist.cxx  Blacklist.h  CConnection.cxx  CConnection.h  CMakeLists.txt  CMsgHandler.cxx  CMsgHandler.h  CMsgReader.cxx  CMsgReader.h  CMsgWriter.cxx  CMsgWriter.h  CSecurity.h  CSecurityDH.cxx  CSecurityMSLogonII.cxx  CSecurityPlain.cxx  CSecurityRSAAES.cxx  CSecurityRSAAES.h  CSecurityTLS.cxx  CSecurityTLS.h  CSecurityVeNCrypt.cxx  CSecurityVncAuth.cxx  ClientParams.cxx  ClientParams.h  ComparingUpdateTracker.cxx  ComparingUpdateTracker.h  Configuration.cxx  Configuration.h  Congestion.cxx  Congestion.h  CopyRectDecoder.cxx  CopyRectDecoder.h  Cursor.cxx  Cursor.h  DecodeManager.cxx  DecodeManager.h  Decoder.cxx  Decoder.h  EncodeManager.cxx  EncodeManager.h  Encoder.h  (+101 more)
po/: CMakeLists.txt
tests/perf/: CMakeLists.txt  decperf.cxx  encperf.cxx  fbperf.cxx  util.cxx
tests/unit/: CMakeLists.txt  convertlf.cxx  emulatemb.cxx  gesturehandler.cxx  hostport.cxx  hotkeyhandler.cxx  pixelformat.cxx  unicode.cxx
unix/: xserver120.patch
unix/common/: randr.cxx
unix/tx/: TXButton.h  TXCheckbox.h  TXDialog.h  TXLabel.h  TXWindow.cxx  TXWindow.h
unix/vncconfig/: QueryConnectDialog.cxx  QueryConnectDialog.h  vncconfig.cxx
unix/vncpasswd/: vncpasswd.cxx
unix/x0vncserver/: Geometry.cxx  Geometry.h  Image.cxx  PollingManager.cxx  XDesktop.cxx  XDesktop.h  XPixelBuffer.cxx  XPixelBuffer.h  x0vncserver.cxx
unix/xserver/hw/vnc/: Makefile.am  RFBGlue.cc  XorgGlue.c  XserverDesktop.cc  XserverDesktop.h  Xvnc.man  vncExtInit.cc  vncExtInit.h  vncPresent.c  xvnc.c
vncviewer/: BaseKeyboardHandler.cxx  BaseKeyboardHandler.h  BaseTouchHandler.cxx  BaseTouchHandler.h  CConn.cxx  CConn.h  CMakeLists.txt  DecodeManager.cxx  DecodeManager.h  DesktopWindow.cxx  DesktopWindow.h  EmulateMB.cxx  EmulateMB.h  GestureEvent.h  GestureHandler.cxx  GestureHandler.h  HotKeyHandler.cxx  HotKeyHandler.h  Info.plist  Keyboard.h  KeyboardMacOS.h  KeyboardMacOS.mm  KeyboardWin32.cxx  KeyboardWin32.h  KeyboardX11.cxx  KeyboardX11.h  MacKeyboardHandler.cxx  MacKeyboardHandler.h  MonitorIndicesParameter.cxx  MonitorIndicesParameter.h  OptionsDialog.cxx  OptionsDialog.h  PixelFormat.cxx  PixelFormat.h  PlatformPixelBuffer.cxx  PlatformPixelBuffer.h  ServerDialog.cxx  Surface.cxx  Surface.h  Surface_OSX.cxx  (+109 more)
vncviewer/fltk/: Fl_Monitor_Arrangement.cxx  Fl_Navigation.cxx  theme.cxx
vncviewer/options/: OptionDialogContent.qml  compressiontab.cxx  compressiontab.h  displaytab.cxx  displaytab.h  inputtab.cxx  inputtab.h  misctab.cxx  misctab.h  screensselectionwidget.cxx  screensselectionwidget.h  securitytab.cxx  securitytab.h
vncviewer/qml/: AboutDialog.qml  AboutDialogContent.qml  AlertDialog.qml  AlertDialogContent.qml  AuthDialog.qml  CButton.qml  CCheckBox.qml  CComboBox.qml  CRadioButton.qml  ConfigLoadDialog.qml  ConfigSaveDialog.qml  ConnectionView.qml  ContextMenu.qml  InfoDialog.qml  InfoDialogContent.qml  MessageDialog.qml  OptionDialog.qml  OptionDialogContent.qml  ServerDialog.qml  Toast.qml  VncWindow.qml  main.qml
win/rfb_win32/: AboutDialog.cxx  AboutDialog.h  CMakeLists.txt  CleanDesktop.cxx  Clipboard.cxx  CompatibleBitmap.h  ComputerName.h  CurrentUser.cxx  CurrentUser.h  DIBSectionBuffer.cxx  DIBSectionBuffer.h  DeviceContext.cxx  DeviceContext.h  DeviceFrameBuffer.cxx  DeviceFrameBuffer.h  Dialog.cxx  Dialog.h  EventManager.cxx  IconInfo.h  IntervalTimer.h  LaunchProcess.cxx  LaunchProcess.h  LocalMem.h  ModuleFileName.h  MonitorInfo.cxx  MsgBox.h  MsgWindow.cxx  MsgWindow.h  RegConfig.cxx  RegConfig.h  Registry.cxx  Registry.h  SDisplay.cxx  SDisplay.h  SDisplayCorePolling.cxx  SDisplayCorePolling.h  SDisplayCoreWMHooks.cxx  SInput.cxx  SInput.h  Security.cxx  (+20 more)
win/vncconfig/: Authentication.h  Connections.h  Legacy.cxx  PasswordDialog.cxx  vncconfig.cxx
win/winvnc/: AddNewClientDialog.h  ListConnInfo.h  ManagedListener.cxx  QueryConnectDialog.cxx  QueryConnectDialog.h  STrayIcon.cxx  STrayIcon.h  VNCServerService.cxx  VNCServerWin32.cxx  winvnc.cxx
win/wm_hooks/: wm_hooks.cxx
