include_directories(${CMAKE_SOURCE_DIR}/common)
include_directories(SYSTEM ${PIXMAN_INCLUDE_DIRS})

add_library(core STATIC
  Configuration.cxx
  Exception.cxx
  Logger.cxx
  Logger_file.cxx
  Logger_stdio.cxx
  LogWriter.cxx
  Region.cxx
  Timer.cxx
  string.cxx
  time.cxx)

target_link_libraries(core os)
target_link_libraries(core ${PIXMAN_LIBRARIES})
target_link_directories(core PUBLIC ${PIXMAN_LIBRARY_DIRS})

if(UNIX)
  target_sources(core PRIVATE Logger_syslog.cxx)
endif()

if(UNIX)
  libtool_create_control_file(core)
endif()
